<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.IniciarSesionActivity">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="186dp"
        android:layout_height="182dp"
        android:contentDescription="logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/logoappasee" />

    <TextView
        android:id="@+id/tituloLogin"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:text="Iniciar sesión"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/userLogin"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:hint="Nombre de usuario"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLogin" />

    <TextView
        android:id="@+id/errorUserLogin"
        android:layout_width="264dp"
        android:layout_height="22dp"
        android:visibility="invisible"
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/userLogin"
        app:layout_constraintTop_toBottomOf="@+id/userLogin" />

    <EditText
        android:id="@+id/passLogin"
        android:layout_width="259dp"
        android:layout_height="39dp"
        android:hint="Contraseña"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloLogin"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/errorPassLogin"
        android:layout_width="264dp"
        android:layout_height="22dp"
        android:text="Contraseña incorrecta"
        android:visibility="invisible"
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/passLogin"
        app:layout_constraintTop_toBottomOf="@+id/passLogin" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="Entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLogin"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.893" />

</androidx.constraintlayout.widget.ConstraintLayout>